# moeschberg_example_models

./: .gitmodules  README.md  json_schema.html  pyproject.toml
models/abstract_model/: attribute.py  model.py  product.py
models/wind_turbine_design/: wind_turbine_design.py
sentier_models/: __init__.py  __main__.py  glossary_term.py
sentier_models/abstract_model/: abstract_unit_process.py  attribute.py  model.py  product.py
sentier_models/wind_turbine_design/: wind_turbine_design.py
wind_turbine_data/: README.md  inputs_iris_map.csv  mapping_schema.md  sample_material_outputs.xlsx
